# ProtobufGUI

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  conanfile.txt
rsc/: main.qml  qml.qrc  rsc.qrc
rsc/qml/: EmptyItem.qml  ProtoFileDialog.qml  ProtoSelectDialog.qml  TreeItem.qml  TreeNode.qml  main.qml
src/: MainWindow.cpp  MainWindow.h  ProtoManager.cpp  ProtoManager.h  ProtobufModel.cpp  ProtobufModel.h  WindowController.cpp  WindowController.h  boolprotoitem.cpp  boolprotoitem.h  enumprotoitem.cpp  enumprotoitem.h  fielddelegate.cpp  fielddelegate.h  floatprotoitem.cpp  floatprotoitem.h  main.cpp  mainwindow.cpp  mainwindow.h  messageprotoitem.cpp  messageprotoitem.h  numericprotoitem.cpp  numericprotoitem.h  protobufmodel.cpp  protobufmodel.h  protodata.cpp  protodata.h  protoerrordialog.cpp  protoerrordialog.h  protoloader.cpp  protoloader.h  protomanager.cpp  protomanager.h  prototreeerror.cpp  prototreeerror.h  prototreeitem.cpp  prototreeitem.h  prototypedialog.cpp  prototypedialog.h  protoview.cpp  (+8 more)
src/tree_items/: boolprotoitem.cpp  boolprotoitem.h  bytestprotoitem.cpp  bytestprotoitem.h  enumprotoitem.cpp  enumprotoitem.h  floatprotoitem.cpp  floatprotoitem.h  messageprotoitem.cpp  messageprotoitem.h  numericprotoitem.cpp  numericprotoitem.h  protofieldwrapper.cpp  protofieldwrapper.h  prototreeitem.cpp  prototreeitem.h  repeatedprotoitem.cpp  repeatedprotoitem.h  rootprotoitem.cpp  rootprotoitem.h  stringprotoitem.cpp  stringprotoitem.h
tests/data/protobuf2/package1/: address.proto  departament.proto  organization.proto  person.proto
tests/data/protobuf2/package2/: character.proto  item.proto
tests/data/protobuf2/package3/: statement.proto
tests/data/protobuf3/package3/: address.proto  departament.proto  organization.proto  person.proto
tests/data/protobuf3/package4/: character.proto  item.proto  stat.proto
ui/: mainwindow.ui  protoerrordialog.ui  prototypedialog.ui  protoview.ui
